<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="purewater.com.leadapp.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/install"

        />


    <LinearLayout
        android:id="@+id/fiststep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/appnametitle"
            android:layout_marginTop="50dp"
            />

        <Button
            android:id="@+id/intall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/install"
            />



    </LinearLayout>


      <!--<android.support.v7.widget.AppCompatSeekBar-->
       <!--android:id="@+id/steptwo"-->
       <!--android:layout_width="match_parent"-->
       <!--android:layout_height="wrap_content"-->
       <!--android:layout_margin="@dimen/margins"-->
       <!--android:visibility="gone"-->
       <!--/>-->
    <LinearLayout
        android:id="@+id/twostep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        >


        <ProgressBar
            android:id="@+id/jindu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            style="@android:style/Widget.ProgressBar.Horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="正在安装，请稍后。。。"
            />
    </LinearLayout>



     <LinearLayout
         android:orientation="vertical"
         android:id="@+id/three"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_height="wrap_content">

         <ImageView
             android:id="@+id/qcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/scanqcode"
             />
     </LinearLayout>




    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/four"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jihuosucess"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/appnametitle"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fivestep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/restart"
            />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/daojishichongqi"
            />


    </LinearLayout>


</LinearLayout>
